2011-01-15  Murray Cumming  <murrayc@murrayc.com>

	ComboBoxText: Remove the constructor that takes a model.
	
	* gtk/src/comboboxtext.[hg|ccg]: Remove the (model, bool) constructor 
	because there is no such gtk_combo_box_new_with_model() function to match, 
	and because this would be silly.
	
	This was mentioned in bug #619656 by Kjell Ahlstedt.

2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	ComboBox: Documentation: Correct the overview

	* gtk/src/combobox.hg: Update the overview comment now that the documentation 
	for the C API has been improved. This removes the mention of OptionMenu, 
	mention has-entry, and talks more about ComboBoxEntry.
	
	This was mentioned in bug #619656 by Kjell Ahlstedt.

2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	ComboBoxText: Documentation: Correct the overview.

	* gtk/src/comboboxtext.hg: Mention append(), etc, instead of 
	append_text(), etc.
	Bug #638405 (Dingeman van der Laan)

2011-01-13  Murray Cumming  <murrayc@murrayc.com>

	Window: Correct my broken begin_drag() implementation.

	* gdk/src/window.ccg: gdk_drag_begin() takes a GList*, not an array.

2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	DragContext: Deprecate create(), adding Window::drag_begin().

	* gdk/src/dragcontext.hg: Deprecate the constructor and create(), because 
	the equivalent gdk_drag_context_new() is deprecated.
	* gdk/src/window.[hg|ccg]: Added begin_drag(), wrapping gdk_drag_begin(), 
	mentioned in the deprecation comment.
	* tools/m4/convert_gdk.m4: Added a DragContext conversion.

2011-01-14  Murray Cumming  <murrayc@murrayc.com>

	Widget: Make some methods protected.

	* gtk/src/widget.hg: set_window(), set_has_window(), and get_requisition() 
	should only be used by the widget itself, in derived classes, so they can 
	be protected, to simplify the public API.

2011-01-13  Murray Cumming  <murrayc@murrayc.com>

	Documentation: Remove mentions of Pixmap.

	* gdk/src/window.hg: Remove declaration of set_icon(pixmap), which had 