@@ -1,5 +1,13 @@
 2011-01-15  Murray Cumming  <murrayc@murrayc.com>
 
+	ListViewText: Rename methods to be consistent with ComboBoxText.
+
+	* gtk/gtkmm/listviewtext.[h|cc]: Rename append_text(), insert_text(), and 
+	prepend_text() to append(), insert() and prepend() because that is what 
+	ComboBoxText now uses (because it has other append overloads).
+
+2011-01-15  Murray Cumming  <murrayc@murrayc.com>
+
 	ComboBoxText: Remove the constructor that takes a model.
 	
 	* gtk/src/comboboxtext.[hg|ccg]: Remove the (model, bool) constructor 
